# NUCLEO-F401RE-invpend-SPIslave-BLDC

./: .gitignore  .mxproject  CMakeLists.txt  INTEGRATION_MANUAL_STEPS.md  README.md  invpend_BLDC.ioc  invpend_BLDC.settings  invpend_BLDC.wbdef
Inc/: app_config.h  chrono.h  drive_parameters.h  main.h  mc_config.h  mc_config_common.h  mc_configuration_registers.h  mc_math.h  mc_parameters.h  mc_stm_types.h  mcp_config.h  parameters_conversion.h  parameters_conversion_f4xx.h  pendulum_control.h  pmsm_motor_parameters.h  power_stage_parameters.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  torque_control.h
MCSDK_v6.4.1-Full/MotorControl/MCSDK/MCLib/F4xx/Inc/: ics_f4xx_pwm_curr_fdbk.h  r3_1_f4xx_pwm_curr_fdbk.h  r3_2_f4xx_pwm_curr_fdbk.h
MCSDK_v6.4.1-Full/MotorControl/MCSDK/MCLib/F4xx/Src/: ics_f4xx_pwm_curr_fdbk.c  r3_1_f4xx_pwm_curr_fdbk.c  r3_2_f4xx_pwm_curr_fdbk.c
STM32CubeIDE/: .cproject  .project
Src/: chrono.c  hf_registers.c  main.c  mc_config.c  mc_config_common.c  mc_configuration_registers.c  mc_math.c  mc_parameters.c  mc_tasks.c  mc_tasks_foc.c  pendulum_control.c  regular_conversion_manager.c  stm32_mc_common_it.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_mc_it.c  sync_registers.c  torque_control.c  usart_aspep_driver.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: claude-instructions.md
